# serverless-framework-gcp-tutorial

./: .gitignore  README.md
my-service/: README.md  main.py  package-lock.json  package.json  pyproject.toml  serverless.yml
